--- a/frontend/src/modules/auth/register/style.scss
+++ b/frontend/src/modules/auth/register/style.scss
@@ -114,7 +114,8 @@
             height: 50vh;
 
             h1 {
-                font-size: 1.1em;
+                font-size: 0.9em;
+                padding-top: 0.3em;
             }
 
             .registerScreen-inputs {
